- Fix: Hover effect works even when Links has no href which is wrong (Breadcrumb) - Fix: Wrong alignment for the back button

--- a/src/components/atoms/Link/Link.module.pcss
+++ b/src/components/atoms/Link/Link.module.pcss
@@ -1,4 +1,5 @@
 .link {
+  position: relative;
   font-size: 14px;
   font-family: var(--font-family-openSans);
   color: var(--color-gray-dark);
@@ -19,7 +20,7 @@
   }
 
   &:hover:not(&-disabled), &:active:not(&-disabled) {
-    &::after {
+    &:link::after, &:visited::after {
       content: "";
       position: absolute;
       bottom: -2px;
