--- a/src/components/molecules/RecordHeader/RecordHeader.module.css
+++ b/src/components/molecules/RecordHeader/RecordHeader.module.css
@@ -4,19 +4,15 @@
 }
 
 .RecordHeader {
+  position: relative;
   display: flex;
   width: 100%;
   padding: 21px 0;
   align-items: baseline;
 }
 
-.hasMinusMargin {
-  margin-left: -26px;
-}
-
 .leftContent {
   margin-right: auto;
-  margin-left: 12px;
 }
 
 .displayName {
@@ -42,6 +38,12 @@
   font-family: var(--font-family-openSans);
   font-size: var(--font-size-12);
   font-weight: var(--font-weight-regular);
+}
+
+.iconContent {
+  position: absolute;
+  left: -30px;
+  margin-top: 6px;
 }
 
 .icon {
